--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,7 @@ a:focus {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  margin-right: 30px;
 }
 
 .navbar-brand {
